--- a/spring-cxf-ws/pom.xml
+++ b/spring-cxf-ws/pom.xml
@@ -6,6 +6,19 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Spring CXF WS</name>
+	<build>
+<plugins>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.2</version> <!-- or whatever current version -->
+    <configuration>
+      <source>1.8</source>
+      <target>1.8</target>
+    </configuration>
+  </plugin>
+</plugins>
+</build>
 <properties>
    
 
