--- a/spring-cxf-ws/pom.xml
+++ b/spring-cxf-ws/pom.xml
@@ -6,6 +6,21 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Spring CXF WS</name>
+	
+	
+	<build> 
+<plugins> 
+  <plugin> 
+    <groupId>org.apache.maven.plugins</groupId> 
+    <artifactId>maven-compiler-plugin</artifactId> 
+    <version>3.2</version> <!-- or whatever current version --> 
+    <configuration> 
+      <source>1.8</source> 
+      <target>1.8</target> 
+    </configuration> 
+  </plugin> 
+</plugins> 
+</build> 
 <properties>
    
 
@@ -16,6 +31,15 @@
 	</properties>
 
 	<dependencies>
+	
+	<!-- https://mvnrepository.com/artifact/org.easymock/easymock -->
+<dependency>
+    <groupId>org.easymock</groupId>
+    <artifactId>easymock</artifactId>
+    <version>3.1</version>
+    <scope>test</scope>
+</dependency>
+	
 		<!-- Spring framework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -70,6 +94,25 @@
 			<version>${cxf.version}</version>
 		</dependency>
 
+<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>1.4.197</version>
+    <scope>test</scope>
+</dependency>
+
+<dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+ 
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.2.8</version>
+        </dependency>
 
 
 <!-- ******* JPA/Hibernate ******** -->
